# Robotics-Design-Contest

./: .gitignore  CMakeLists.txt  README.md  buzzer.c  buzzer.h  main.c  ustrobo16_internal.uvguix.Forsythe  ustrobo16_internal.uvoptx  ustrobo16_internal.uvprojx
Listings/: startup_stm32f10x_md.lst  ustrobo16_internal.map
Objects/: adc.crf  adc.d  button.crf  button.d  buzzer.crf  buzzer.d  core_cm3.crf  core_cm3.d  delay.crf  delay.d  gpio.crf  gpio.d  lcd_blue.crf  lcd_blue.d  lcd_font.crf  lcd_font.d  leds.crf  leds.d  linear_ccd.crf  linear_ccd.d  main.crf  main.d  misc.crf  misc.d  motor.crf  motor.d  pneumatic.crf  pneumatic.d  servo.crf  servo.d  startup_stm32f10x_md.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp.crf  stm32f10x_bkp.d  stm32f10x_can.__i  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_cec.crf  stm32f10x_cec.d  (+52 more)
src/pk/: encoder.c  encoder.h  main.c  pid.c  pid.h
src/user/: bluetooth.c  bluetooth.h  encoder.c  encoder.h  filter_ccd.c  filter_ccd.h  main.c  main.h  pid.c  pid.h
