cmake_minimum_required(VERSION 3.6)
project(ustrobo16_internal)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    DebugConfig/stm32f103rb_libraryr_STM32F103RB.dbgconf
    DebugConfig/stm32f103rb_template_STM32F103RB.dbgconf
    DebugConfig/Target_1_STM32F103RB.dbgconf
    Listings/startup_stm32f10x_md.lst
    Listings/ustrobo16_internal.map
    Objects/adc.crf
    Objects/adc.d
    Objects/adc.o
    Objects/button.crf
    Objects/button.d
    Objects/button.o
    Objects/buzzer.crf
    Objects/buzzer.d
    Objects/buzzer.o
    Objects/core_cm3.crf
    Objects/core_cm3.d
    Objects/core_cm3.o
    Objects/delay.crf
    Objects/delay.d
    Objects/delay.o
    Objects/gpio.crf
    Objects/gpio.d
    Objects/gpio.o
    Objects/lcd_blue.crf
    Objects/lcd_blue.d
    Objects/lcd_blue.o
    Objects/lcd_font.crf
    Objects/lcd_font.d
    Objects/lcd_font.o
    Objects/leds.crf
    Objects/leds.d
    Objects/leds.o
    Objects/linear_ccd.crf
    Objects/linear_ccd.d
    Objects/linear_ccd.o
    Objects/main.crf
    Objects/main.d
    Objects/main.o
    Objects/misc.crf
    Objects/misc.d
    Objects/misc.o
    Objects/motor.crf
    Objects/motor.d
    Objects/motor.o
    Objects/pneumatic.crf
    Objects/pneumatic.d
    Objects/pneumatic.o
    Objects/servo.crf
    Objects/servo.d
    Objects/servo.o
    Objects/startup_stm32f10x_md.d
    Objects/startup_stm32f10x_md.o
    Objects/stm32f10x_adc.crf
    Objects/stm32f10x_adc.d
    Objects/stm32f10x_adc.o
    Objects/stm32f10x_bkp.crf
    Objects/stm32f10x_bkp.d
    Objects/stm32f10x_bkp.o
    Objects/stm32f10x_can.crf
    Objects/stm32f10x_can.d
    Objects/stm32f10x_can.o
    Objects/stm32f10x_cec.crf
    Objects/stm32f10x_cec.d
    Objects/stm32f10x_cec.o
    Objects/stm32f10x_crc.crf
    Objects/stm32f10x_crc.d
    Objects/stm32f10x_crc.o
    Objects/stm32f10x_dac.crf
    Objects/stm32f10x_dac.d
    Objects/stm32f10x_dac.o
    Objects/stm32f10x_dbgmcu.crf
    Objects/stm32f10x_dbgmcu.d
    Objects/stm32f10x_dbgmcu.o
    Objects/stm32f10x_dma.crf
    Objects/stm32f10x_dma.d
    Objects/stm32f10x_dma.o
    Objects/stm32f10x_exti.crf
    Objects/stm32f10x_exti.d
    Objects/stm32f10x_exti.o
    Objects/stm32f10x_flash.crf
    Objects/stm32f10x_flash.d
    Objects/stm32f10x_flash.o
    Objects/stm32f10x_fsmc.crf
    Objects/stm32f10x_fsmc.d
    Objects/stm32f10x_fsmc.o
    Objects/stm32f10x_gpio.crf
    Objects/stm32f10x_gpio.d
    Objects/stm32f10x_gpio.o
    Objects/stm32f10x_i2c.crf
    Objects/stm32f10x_i2c.d
    Objects/stm32f10x_i2c.o
    Objects/stm32f10x_iwdg.crf
    Objects/stm32f10x_iwdg.d
    Objects/stm32f10x_iwdg.o
    Objects/stm32f10x_pwr.crf
    Objects/stm32f10x_pwr.d
    Objects/stm32f10x_pwr.o
    Objects/stm32f10x_rcc.crf
    Objects/stm32f10x_rcc.d
    Objects/stm32f10x_rcc.o
    Objects/stm32f10x_rtc.crf
    Objects/stm32f10x_rtc.d
    Objects/stm32f10x_rtc.o
    Objects/stm32f10x_sdio.crf
    Objects/stm32f10x_sdio.d
    Objects/stm32f10x_sdio.o
    Objects/stm32f10x_spi.crf
    Objects/stm32f10x_spi.d
    Objects/stm32f10x_spi.o
    Objects/stm32f10x_tim.crf
    Objects/stm32f10x_tim.d
    Objects/stm32f10x_tim.o
    Objects/stm32f10x_usart.crf
    Objects/stm32f10x_usart.d
    Objects/stm32f10x_usart.o
    Objects/stm32f10x_wwdg.crf
    Objects/stm32f10x_wwdg.d
    Objects/stm32f10x_wwdg.o
    Objects/system_stm32f10x.crf
    Objects/system_stm32f10x.d
    Objects/system_stm32f10x.o
    Objects/tft_display.crf
    Objects/tft_display.d
    Objects/tft_display.o
    Objects/tft_font.crf
    Objects/tft_font.d
    Objects/tft_font.o
    Objects/ticks.crf
    Objects/ticks.d
    Objects/ticks.o
    Objects/uart.crf
    Objects/uart.d
    Objects/uart.o
    Objects/ustrobo16_internal.axf
    Objects/ustrobo16_internal.build_log.htm
    Objects/ustrobo16_internal.hex
    Objects/ustrobo16_internal.htm
    Objects/ustrobo16_internal.lnp
    Objects/ustrobo16_internal.sct
    Objects/ustrobo16_internal_stm32f103rb_template.dep
    src/library/adc.c
    src/library/adc.h
    src/library/button.c
    src/library/button.h
    src/library/delay.c
    src/library/delay.h
    src/library/gpio.c
    src/library/gpio.h
    src/library/lcd_blue.c
    src/library/lcd_blue.h
    src/library/lcd_font.c
    src/library/lcd_font.h
    src/library/leds.c
    src/library/leds.h
    src/library/linear_ccd.c
    src/library/linear_ccd.h
    src/library/motor.c
    src/library/motor.h
    src/library/pneumatic.c
    src/library/pneumatic.h
    src/library/servo.c
    src/library/servo.h
    src/library/ticks.c
    src/library/ticks.h
    src/library/uart.c
    src/library/uart.h
    src/stm32f10x_startup/startup_stm32f10x_hd.s
    src/stm32f10x_startup/startup_stm32f10x_md.s
    src/stm32f10x_startup/startup_stm32f10x_xl.s
    src/stm32f10x_std/inc/core_cm3.h
    src/stm32f10x_std/inc/misc.h
    src/stm32f10x_std/inc/stm32f10x.h
    src/stm32f10x_std/inc/stm32f10x_adc.h
    src/stm32f10x_std/inc/stm32f10x_bkp.h
    src/stm32f10x_std/inc/stm32f10x_can.h
    src/stm32f10x_std/inc/stm32f10x_cec.h
    src/stm32f10x_std/inc/stm32f10x_conf.h
    src/stm32f10x_std/inc/stm32f10x_crc.h
    src/stm32f10x_std/inc/stm32f10x_dac.h
    src/stm32f10x_std/inc/stm32f10x_dbgmcu.h
    src/stm32f10x_std/inc/stm32f10x_dma.h
    src/stm32f10x_std/inc/stm32f10x_exti.h
    src/stm32f10x_std/inc/stm32f10x_flash.h
    src/stm32f10x_std/inc/stm32f10x_fsmc.h
    src/stm32f10x_std/inc/stm32f10x_gpio.h
    src/stm32f10x_std/inc/stm32f10x_gpio.h~RFe67f3d8.TMP
    src/stm32f10x_std/inc/stm32f10x_i2c.h
    src/stm32f10x_std/inc/stm32f10x_iwdg.h
    src/stm32f10x_std/inc/stm32f10x_pwr.h
    src/stm32f10x_std/inc/stm32f10x_rcc.h
    src/stm32f10x_std/inc/stm32f10x_rcc.h~RF5dfe9b.TMP
    src/stm32f10x_std/inc/stm32f10x_rtc.h
    src/stm32f10x_std/inc/stm32f10x_sdio.h
    src/stm32f10x_std/inc/stm32f10x_spi.h
    src/stm32f10x_std/inc/stm32f10x_tim.h
    src/stm32f10x_std/inc/stm32f10x_usart.h
    src/stm32f10x_std/inc/stm32f10x_wwdg.h
    src/stm32f10x_std/inc/system_stm32f10x.h
    src/stm32f10x_std/src/core_cm3.c
    src/stm32f10x_std/src/misc.c
    src/stm32f10x_std/src/stm32f10x_adc.c
    src/stm32f10x_std/src/stm32f10x_bkp.c
    src/stm32f10x_std/src/stm32f10x_can.c
    src/stm32f10x_std/src/stm32f10x_cec.c
    src/stm32f10x_std/src/stm32f10x_crc.c
    src/stm32f10x_std/src/stm32f10x_dac.c
    src/stm32f10x_std/src/stm32f10x_dbgmcu.c
    src/stm32f10x_std/src/stm32f10x_dma.c
    src/stm32f10x_std/src/stm32f10x_exti.c
    src/stm32f10x_std/src/stm32f10x_flash.c
    src/stm32f10x_std/src/stm32f10x_fsmc.c
    src/stm32f10x_std/src/stm32f10x_gpio.c
    src/stm32f10x_std/src/stm32f10x_i2c.c
    src/stm32f10x_std/src/stm32f10x_iwdg.c
    src/stm32f10x_std/src/stm32f10x_pwr.c
    src/stm32f10x_std/src/stm32f10x_rcc.c
    src/stm32f10x_std/src/stm32f10x_rtc.c
    src/stm32f10x_std/src/stm32f10x_sdio.c
    src/stm32f10x_std/src/stm32f10x_spi.c
    src/stm32f10x_std/src/stm32f10x_tim.c
    src/stm32f10x_std/src/stm32f10x_usart.c
    src/stm32f10x_std/src/stm32f10x_wwdg.c
    src/stm32f10x_std/src/system_stm32f10x.c
    src/user/main.c
    src/user/main.h)

add_executable(ustrobo16_internal ${SOURCE_FILES})